--- a/CalendarApplication/CalendarApplication/Views/Home/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Home/Index.cshtml
@@ -4,13 +4,14 @@
 }
 
 @using CalendarApplication.Models.User;
+@using CalendarApplication.Models.Calendar;
 
 @if(!Request.IsAuthenticated) {
     <h2>Welcome to Stengade CalendarApplication</h2>
 
     <text>
         You may view upcomming events using the
-        @Html.ActionLink("calendar menu", "Month", "Calendar", new { year = DateTime.Now.Year, month = DateTime.Now.Month }, null).<br />
+        @Html.ActionLink("calendar menu", "", "Calendar", new { mode = 0, year = DateTime.Now.Year, month = DateTime.Now.Month, day = 0 }, null).<br />
         If you have an account, you may  
         @Html.ActionLink("log in", "Login", "Account", null, null)
         else you may create an account by @Html.ActionLink("registering", "Register", "Account", null, null).
