--- a/CalendarApplication/CalendarApplication/Views/Calendar/Month.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/Month.cshtml
@@ -1,18 +1,12 @@
 ﻿@model CalendarApplication.Models.Calendar.CalendarMonth
 
-@{
-    ViewBag.Title = "Month";
-}
-
 <h2>Monthly view</h2>
 
 @using CalendarApplication.Models.Calendar;
 @using CalendarApplication.Models.Event;
 @using System.Globalization;
 
-@Html.ActionLink("View List", "List")
-
-<!--Html.Partial("ViewCheck", Model.VCM)-->
+@Html.ActionLink("View List", "Index", new { mode = 2, year = Model.Date.Year, month = Model.Date.Month, day = 1 })
 
 <table style="font-size:20px;padding:0;border-spacing:0;width:700px">
     <tr style="padding:0">
@@ -23,23 +17,25 @@
     <tr style="padding:0">
         <td style="text-align:left;padding:0;width:15%">
                         @Html.ActionLink(Model.Date.AddYears(-1).ToString("<- yyyy"), "Index", "Calendar",
-                             new { year = Model.Date.AddYears(-1).Year, month = Model.Date.Month }, null)
+                             new { mode = 0, year = Model.Date.AddYears(-1).Year, month = Model.Date.Month, day = 0 }, null)
         </td>
         <td style="padding:0;text-align:center;">@Model.Date.Year</td>
         <td style="text-align:right;padding:0;width:15%">
                         @Html.ActionLink(Model.Date.AddYears(1).ToString("yyyy ->"), "Index", "Calendar",
-                             new { year = Model.Date.AddYears(1).Year, month = Model.Date.Month }, null)
+                             new { mode = 0, year = Model.Date.AddYears(1).Year, month = Model.Date.Month, day = 0 }, null)
         </td>
     </tr>
     <tr style="padding:0">
         <td style="text-align:left;padding:0;width:15%">
                         @Html.ActionLink(Model.Date.AddMonths(-1).ToString("<- MMMM"), "Index", "Calendar",
-                             new { year = Model.Date.AddMonths(-1).Year, month = Model.Date.AddMonths(-1).Month }, null)
+                             new { mode = 0, year = Model.Date.AddMonths(-1).Year,
+                                 month = Model.Date.AddMonths(-1).Month, day = 0}, null)
         </td>
         <td style="padding:0;text-align:center">@(Model.Date.ToString("MMMM"))</td>
         <td style="text-align:right;padding:0;width:15%">
                         @Html.ActionLink(Model.Date.AddMonths(1).ToString("MMMM ->"), "Index", "Calendar",
-                             new { year = Model.Date.AddMonths(1).Year, month = Model.Date.AddMonths(1).Month }, null)
+                             new { mode = 0, year = Model.Date.AddMonths(1).Year,
+                                 month = Model.Date.AddMonths(1).Month, day = 0 }, null)
         </td>
     </tr>
 </table>
@@ -73,8 +69,8 @@
             <table style="border-spacing:0;width:100%">
                 <tr>
                     <td style="text-align:left;vertical-align:top;padding:0;font-size:14px;width:8px">
-                        @Html.ActionLink(day.Date.Day.ToString(), "Day", "Calendar",
-                                            new { year = day.Date.Year, month = day.Date.Month, day = day.Date.Day }, null)
+                        @Html.ActionLink(day.Date.Day.ToString(), "Index", "Calendar",
+                                         new { mode = 1, year = day.Date.Year, month = day.Date.Month, day = day.Date.Day }, null)
                     </td>
                     <td style="padding:3px">
                         <table style="border-spacing:0;width:100%">
