--- a/CalendarApplication/CalendarApplication/Views/Account/Login.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Account/Login.cshtml
@@ -5,6 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+
 <h2>Login</h2>
 
 <h2>Use a local account to log in.</h2>
