--- a/CalendarApplication/CalendarApplication/Views/Calendar/Day.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/Day.cshtml
@@ -2,31 +2,32 @@
 
 @using CalendarApplication.Models.Event;
 
-<h2>Day: @Model.Date.ToString("dd-MM-yyyy")</h2>
-
 <table style="font-size:20px;width:850px">
     <tr>
         <td colspan="3" style="text-align:center">
             @Html.ActionLink("Today", "Index", "Calendar",
-                             new { mode = 1, year = DateTime.Now.Year, month = DateTime.Now.Month, day = DateTime.Now.Day }, null)
+                             new { mode = 1, year = DateTime.Now.Year, month = DateTime.Now.Month, day = DateTime.Now.Day,
+                                    range = 0})
         </td>
     </tr>
     <tr>
         <td style="text-align:left;padding:0;width:20%">
             @{DateTime date = Model.Date.AddDays(-1);}
             @Html.ActionLink(date.ToString("<- d. MMM"), "Index", "Calendar",
-                             new { mode = 1, year = date.Year, month = date.Month, day = date.Day }, null)
+                             new { mode = 1, year = date.Year, month = date.Month, day = date.Day, range = 0})
         </td>
         <td style="text-align:center;padding:0;width:60%">
             @Model.Date.ToString("d. ")
             @Html.ActionLink(Model.Date.ToString("MMM"), "Index", "Calendar",
-                             new { mode = 0, year = Model.Date.Year, month = Model.Date.Month, day = 0 }, null)
+                             new { mode = 0, year = Model.Date.Year, month = Model.Date.Month, day = 0,
+                                    range = 0})
             @Model.Date.ToString(" yyy")
         </td>
         <td style="text-align:right;padding:0;width:20%">
             @{date = Model.Date.AddDays(1);}
             @Html.ActionLink(date.ToString("d. MMM ->"), "Index", "Calendar",
-                             new { mode = 1, year = date.Year, month = date.Month, day = date.Day }, null)
+                             new { mode = 1, year = date.Year, month = date.Month, day = date.Day,
+                                    range = 0})
         </td>
     </tr>
 </table>
