Changed colors and minor bug fix

--- a/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
@@ -49,7 +49,7 @@ else {
                 </tr>
                 <tr>
                     <td>Event State</td>
-                    <td>@Model.State</td>
+                    <td style="background-color: @Model.getColor()">@Model.getStateText()</td>
                 </tr>
                 <tr>
                     <td>Event Visible</td>
