--- a/CalendarApplication/CalendarApplication/Views/Calendar/List.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/List.cshtml
@@ -11,10 +11,10 @@
 <table border="1">
     <tr>
         <td><b>Event Name</b></td>   <td><b>Starting</b></td>    <td><b>Ending</b></td>  <td><b>Created by:</b></td>
-        <td><b>Event Type</b></td>
+        <td><b>Event Type</b></td>   <td><b>State</b></td>
     </tr>
     @foreach (BasicEvent ev in Model.Events) {
-        <tr style="background-color:@(ev.getColor())">
+        <tr>
             <td>
                 @Html.ActionLink((ev.Name.Length > 10 ? ev.Name.Substring(0,8)+"..." : ev.Name), "Index", "Event", new { id = ev.ID }, null)
             </td>
@@ -28,7 +28,10 @@
                 @Html.DisplayFor(modelItem => ev.Creator)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => ev.Type)
+                @Html.DisplayFor(modelItem => ev.TypeName)
+            </td>
+            <td style="background-color:@(ev.getColor())">
+                @ev.getStateText()
             </td>
         </tr>
     }
