--- a/CalendarApplication/CalendarApplication/Views/Calendar/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/Index.cshtml
@@ -6,6 +6,7 @@
 
 @using CalendarApplication.Models.Calendar;
 @using CalendarApplication.Models.User;
+@using CalendarApplication.Models.Event;
 
 <h2>Events</h2>
 
@@ -72,18 +73,25 @@
                         @Html.ValidationMessageFor(model => model.Range)
                     </div>
                 }
+                
+                <b>Event States:</b><br />
+                @Html.CheckBoxFor(model => Model.ViewState0)
+                <span style="color:@BasicEvent.getColor(0)">@BasicEvent.getStateText(0)</span><br />
+                @Html.CheckBoxFor(model => Model.ViewState1)
+                <span style="color:@BasicEvent.getColor(1)">@BasicEvent.getStateText(1)</span><br />
+                @Html.CheckBoxFor(model => Model.ViewState2)
+                <span style="color:@BasicEvent.getColor(2)">@BasicEvent.getStateText(2)</span><br />
 
-                <b>Groups:</b><br />
-                @for (int i = 0; i < Model.Groups.Count; i++)
+                <b>Event Types:</b><br />
+                @for (int i = 0; i < Model.Eventtypes.Count; i++)
                 {
                     <div>
-                        @Html.HiddenFor(model => Model.Groups[i].ID)
-                        @Html.HiddenFor(model => Model.Groups[i].Name)
-                        @Html.CheckBoxFor(model => Model.Groups[i].Selected)
-                        @Model.Groups[i].Name
+                        @Html.HiddenFor(model => Model.Eventtypes[i].ID)
+                        @Html.HiddenFor(model => Model.Eventtypes[i].Name)
+                        @Html.CheckBoxFor(model => Model.Eventtypes[i].Selected)
+                        @Model.Eventtypes[i].Name
                     </div>
                 }
-                <b>Event Types:</b><br />
             <input type="submit" value="Submit"/>
             </fieldset>
             }
