--- a/CalendarApplication/CalendarApplication/Views/Home/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Home/Index.cshtml
@@ -26,4 +26,4 @@ else {
     </text>
     
 }
-@Html.ActionLink("Create EventType", "EditEventType", "EventType")
+@Html.ActionLink("Create EventType", "EditEventType", "EventType", new { id = -1 }, null)
