--- a/CalendarApplication/CalendarApplication/Views/EventType/FieldDetails.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/EventType/FieldDetails.cshtml
@@ -4,29 +4,40 @@
 
 <table style="border: solid black 1px">
     <tr>
-        <td><label for='Name_'>Name of field</label></td>
-        <td><label for='Desc_@(Model.ViewID)'>Description of field</label></td>
+        <td><label for='Name_@(Model.ViewID)'>Name of field</label></td>
         <td><label for='Type_@(Model.ViewID)'>Datatype of field</label></td>
-        <td><label for='Req_@(Model.ViewID)'>Field required</label></td>
-        <th rowspan="2" style="vertical-align:middle">
+        <td><label for='Desc_@(Model.ViewID)'>Description of field</label></td>
+        <th rowspan="4" style="vertical-align:middle">
             <button type="button" onclick=removeField(@(Model.ViewID),@(Model.ID))>Remove</button>
         </th>
     </tr>
     <tr>
         <td><input type='text' id='Name_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Name' value="@(Model.Name)"></td>
-        <td><input type='text' id='Desc_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Description' value="@(Model.Description)"></td>
         <td>
-            <select id='Type_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Datatype'>
+            <select id='Type_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Datatype' onchange="updateVarChar(@(Model.ViewID));">
                 @for (int i = 0; i < FieldDataModel.DATA_TYPES.Count; i++)
                 {
                     <option value="@(i)" @(i == Model.Datatype?"Selected":"")>@FieldDataModel.DATA_TYPES[i]</option>
                 }
             </select>
         </td>
-        <td><input type='checkbox' id='Req_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Required' value="true"
-            @(Model.Required?" checked":"")></td>
+        <th rowspan="3"><textarea id='Desc_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Description' cols="40" rows="4">
+                    @(Model.Description)</textarea></th>
+    </tr>
+    <tr>
+        <td><label for='Req_@(Model.ViewID)'>Field required</label></td>
+        <td><div id="varchar_label_@(Model.ViewID)"></div></td>
+    </tr>
+    <tr>
+        <td style="text-align:center">
+            <input type='checkbox' id='Req_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Required' value="true"
+            @(Model.Required?" checked":"")>
+        </td>
+        <td><div id="varchar_input_@(Model.ViewID)"></div></td>
     </tr>
 </table>
+
 <input type="hidden" id="ID_@(Model.ViewID)" name="TypeSpecific[@(Model.ViewID)].ID" value="@Model.ID" />
 <input type="hidden" id="ViewID_@(Model.ViewID)" name="TypeSpecific[@(Model.ViewID)].ViewID" value="@(Model.Name == ""?"-2":"0")" />
+
 <br />
