Fixed bug with textarea (where whitespaces were inserted) and implemented better error handling in MySqlConnect.

--- a/CalendarApplication/CalendarApplication/Views/EventType/EditEventType.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/EventType/EditEventType.cshtml
@@ -13,6 +13,8 @@
 
 <h2>@(Model.ID != -1 ? "Edit Event Type" : "Create Event Type")</h2>
 
+<h3 style="color:red">@TempData["errorMsg"]</h3>
+
 @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl }))
 {
     @Html.HiddenFor(model => Model.ID)
