--- a/CalendarApplication/CalendarApplication/Views/EventType/FieldDetails.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/EventType/FieldDetails.cshtml
@@ -21,8 +21,8 @@
                 }
             </select>
         </td>
-        <th rowspan="3"><textarea id='Desc_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Description' cols="40" rows="4">
-                    @(Model.Description)</textarea></th>
+        <th rowspan="3"><textarea id='Desc_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Description'
+                cols="40" rows="4">@(Model.Description)</textarea></th>
     </tr>
     <tr>
         <td><label for='Req_@(Model.ViewID)'>Field required</label></td>
