--- a/CalendarApplication/CalendarApplication/Views/EventType/FieldDetails.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/EventType/FieldDetails.cshtml
@@ -21,19 +21,35 @@
                 }
             </select>
         </td>
-        <th rowspan="3"><textarea id='Desc_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Description'
-                cols="40" rows="4">@(Model.Description)</textarea></th>
+        <td rowspan="3"><div id="desc_count_@(Model.ViewID)">Characters left: 100</div>
+            <textarea id='Desc_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Description'
+               cols="40" rows="4" onkeyup="updateCounter_test(@(Model.ViewID));">@(Model.Description)</textarea></td>
     </tr>
     <tr>
         <td><label for='Req_@(Model.ViewID)'>Field required</label></td>
-        <td><div id="varchar_label_@(Model.ViewID)"></div></td>
+        <td>
+            <div id="varchar_label_@(Model.ViewID)">
+                @if (Model.Datatype == 1)
+                {
+                    <label>Max size of input:</label>
+                }
+            </div>
+        </td>
     </tr>
     <tr>
         <td style="text-align:center">
-            <input type='checkbox' id='Req_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Required' value="true"
+            <input type='checkbox' id='Req_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Required'
             @(Model.Required?" checked":"")>
         </td>
-        <td><div id="varchar_input_@(Model.ViewID)"></div></td>
+        <td>
+            <div id="varchar_input_@(Model.ViewID)">
+                @if (Model.Datatype == 1)
+                {
+                    <input type='text' id='varchar_size_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].VarcharLength'
+                        value="@Model.VarcharLength">
+                }
+            </div>
+        </td>
     </tr>
 </table>
 
