Moved menu to a partial view.

--- a/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 <html>
 
     @using CalendarApplication.Models.Calendar;
+    @using CalendarApplication.Models.User;
 
 <head>
     <meta charset="utf-8" />
@@ -45,6 +46,9 @@
 </head>
 
 <body>
+    @{
+        UserModel currentUser = UserModel.GetCurrent();   
+    }
     <table style="width:100%; height:100%">
         <tr style="height:80px">
             <th colspan="2">
@@ -53,33 +57,12 @@
         </tr>
         <tr style="height:30px">
             <th colspan="2" style="background-color:lightgrey;text-align:right">
-                @Html.Partial("_LoginPartial")
+                @Html.Partial("_LoginPartial",currentUser)
             </th>
         </tr>
         <tr>
             <td style="width:100px; height:500px; background-color:lightgrey">
-                <table class="gridtable">
-                    @{
-                         var curActn = ViewContext.Controller.ValueProvider.GetValue("action").RawValue.ToString().ToLowerInvariant();
-                         var curCtrl = ViewContext.Controller.ValueProvider.GetValue("controller").RawValue.ToString().ToLowerInvariant();
-                         if(curActn != "" && curCtrl != "home")
-                         {
-                            <tr><td>@Html.ActionLink("Home", "", "Home")</td></tr>
-                         }
-                         else
-                         {
-                            <tr><td><b>Home</b></td></tr>
-                         }
-                        if(curActn != "" && curCtrl != "calendar")
-                        {
-                            <tr><td>@Html.ActionLink("Calendar", "Index", "Calendar", Calendar.InitialView, null)</td></tr>
-                        }
-                        else
-                        {
-                            <tr><td><b>Calendar</b></td></tr>   
-                        }
-                    }
-                </table>
+                @Html.Partial("_MenuPartial",currentUser)
             </td>
             <td>
                 @RenderBody()
