--- a/CalendarApplication/CalendarApplication/Views/Shared/_LoginPartial.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,9 @@
-﻿@using CalendarApplication.Models.User;
+﻿@model CalendarApplication.Models.User.UserModel
+
+@using CalendarApplication.Models.User;
 
 @if (Request.IsAuthenticated) {
-    <text>You are logged in as: @UserModel.GetCurrent().UserName
+    <text>You are logged in as: @Model.UserName
             | @Html.ActionLink("Log out", "Logout", "Account", null, null)</text>
 } else {
     <text>@Html.ActionLink("Register", "Register", "Account", null, null) |
