Added a maintenance page, where the user may edit/create event types. EventType has been renamed to Maintenance. Changed the eventtypefields table in the db to contain varchar length also. Bug fix: Get correct length of old varchar when editing event type.

--- a/CalendarApplication/CalendarApplication/Views/Maintenance/FieldDetails.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/FieldDetails.cshtml
@@ -46,7 +46,7 @@
                 @if (Model.Datatype == 1)
                 {
                     <input type='text' id='varchar_size_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].VarcharLength'
-                        value="@Model.VarcharLength">
+                        value="@Model.VarcharLength" style="width:50px">
                 }
             </div>
         </td>
