--- a/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Shared/_Layout.cshtml
@@ -46,9 +46,6 @@
 </head>
 
 <body>
-    @{
-        UserModel currentUser = UserModel.GetCurrent();   
-    }
     <table style="width:100%; height:100%">
         <tr style="height:80px">
             <th colspan="2">
@@ -57,12 +54,12 @@
         </tr>
         <tr style="height:30px">
             <th colspan="2" style="background-color:lightgrey;text-align:right">
-                @Html.Partial("_LoginPartial",currentUser)
+                @Html.Partial("_LoginPartial")
             </th>
         </tr>
         <tr>
             <td style="width:100px; height:500px; background-color:lightgrey">
-                @Html.Partial("_MenuPartial",currentUser)
+                @Html.Partial("_MenuPartial")
             </td>
             <td>
                 @RenderBody()
