--- a/CalendarApplication/CalendarApplication/Content/Site.css
+++ b/CalendarApplication/CalendarApplication/Content/Site.css
@@ -13,6 +13,23 @@ section {
     display: block;
 }
 
+/* Classes for GUI
+-----------------------------------------------------------*/
+
+/* Used for the datetime editor */
+.datetime-editor {
+    margin-left:0;
+    margin-right:auto;
+    text-align:left;
+    padding:0;
+    border-collapse:collapse;
+}
+.datetime-editor td {
+    padding:0;
+    padding-left:5px;
+    padding-right:5px;
+}
+
 /* Styles for basic forms
 -----------------------------------------------------------*/
 
