--- a/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
@@ -8,8 +8,11 @@
 
 <h2>Create Event</h2>
 
+<h3 style="color:red">@TempData["errorMsg"]</h3>
+
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/date-picker-validator.js")" type="text/javascript"></script>
 
 @using (Html.BeginForm()) {
 <fieldset>
@@ -18,13 +21,15 @@
     @Html.LabelFor(m => m.Name)
     @Html.TextBoxFor(m => m.Name)
     <br />
-    @Html.LabelFor(m => m.Start)
-    @Html.TextBoxFor(m => m.Start)
     <br />
-    @Html.LabelFor(m => m.End)
-    @Html.TextBoxFor(m => m.End)
+    @Html.LabelFor(m => m.Start) <br />
+    @Html.DateTimeEditorFor(m => m.Start, "g.today,l.End")
+    <br />
+    @Html.LabelFor(m => m.End) <br />
+    @Html.DateTimeEditorFor(m => m.End, "g.today,g.Start")
     <br />
     @Html.HiddenFor(m => m.SubmitType)
+    @Html.HiddenFor(m => m.ID)
     @Html.DropDownListFor(m => Model.SelectedEventType,
                             new SelectList(Model.EventTypes, "Value", "Text"),
                             new { onchange="this.form.submit()" })
