Added a htmlhelper for creating select lists (two lists (selected and available), and arrows for adding/removeing). Rooms may now be added to events. Bug: typespecefics are not written to db...

--- a/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
@@ -58,6 +58,10 @@
             }           
         </table>
     }
+    <br />
+    <br />
+
+    @Html.ListEditorFor(m => m.RoomSelectList, "Rooms Selected", "Rooms Available")
 
     <br />
     <input type="submit" value="Create event" onclick="document.getElementById('SubmitType').value = 1" />
