--- a/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
@@ -37,22 +37,28 @@
     @if (Model.TypeSpecefics != null)
     {
         <table>
-            @foreach (FieldModel f in Model.TypeSpecefics)
+            @for (int i = 0; i < Model.TypeSpecefics.Count; i++)
             {
                 <tr>
-                    <td>@f.Name</td>
+                    <td>@Model.TypeSpecefics[i].Name</td>
                     <td>
-                        @switch (f.Datatype)
+                        @Html.HiddenFor(m => Model.TypeSpecefics[i].ID)
+                        @Html.HiddenFor(m => Model.TypeSpecefics[i].Datatype)
+                        @switch (Model.TypeSpecefics[i].Datatype)
                         {
                             case 0:
                             case 3:
-                            case 4: @Html.TextBoxFor(m => f.IntValue); @Html.ValidationMessageFor(m => f.IntValue) break;
+                            case 4: @Html.TextBoxFor(m => Model.TypeSpecefics[i].IntValue);
+                                    @Html.ValidationMessageFor(m => Model.TypeSpecefics[i].IntValue) break;
                             case 1:
                             case 2:
-                            case 5: @Html.TextBoxFor(m => f.StringValue); @Html.ValidationMessageFor(m => f.StringValue) break;
-                            case 6: @Html.CheckBoxFor(m => f.BoolValue); @Html.ValidationMessageFor(m => f.BoolValue) break;
+                            case 5: @Html.TextBoxFor(m => Model.TypeSpecefics[i].StringValue);
+                                    @Html.ValidationMessageFor(m => Model.TypeSpecefics[i].StringValue) break;
+                            case 6: @Html.CheckBoxFor(m => Model.TypeSpecefics[i].BoolValue);
+                                    @Html.ValidationMessageFor(m => Model.TypeSpecefics[i].BoolValue) break;
                         }
-                        @if(f.Required) { <span style='color:red'>*</span> }
+                        @if (Model.TypeSpecefics[i].Required)
+                        { <span style='color:red'>*</span> }
                     </td>
                 </tr>
             }           
